--- a/hackomania/src/App.css
+++ b/hackomania/src/App.css
@@ -13,9 +13,15 @@
 
 }
 
+.body2 {
+  display: flex;
+  flex-direction: row;
+  
+}
 .body {
   flex:5;
-  background-color: #61dafb;
+  background-color: #878472;
+  
 }
 .App-header {
   flex:1;
@@ -23,8 +29,15 @@
   flex-direction: row;
   justify-content: space-between;
   
-  background-color: #f98228;
+  background-color: #de541e;
   align-items: center;
   
 }
 
+.box {
+  margin: 25px;
+  padding: 10px;
+  border-radius: 10px;
+  background-color: #494331;
+  color: #d6d6b1;
+}
