--- a/hackomania/src/App.css
+++ b/hackomania/src/App.css
@@ -41,3 +41,29 @@
   background-color: #848484;
   color: #ffd770;
 }
+
+
+.loginForm {
+  margin-top: 100px;
+  flex:1; 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  
+  input {
+    margin: 5px;
+    padding: 3px;
+  }
+  
+  button {
+    background-color: #b66ee3;
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 2px;
+    width: 100px;
+  }
+  span {
+    color:red;
+  }
+
+}
