--- a/hackomania/src/App.css
+++ b/hackomania/src/App.css
@@ -20,7 +20,7 @@
 }
 .body {
   flex:5;
-  background-color: #eaeaea;
+  background-color: #fbd7d9;
   
 }
 .App-header {
@@ -29,17 +29,17 @@
   flex-direction: row;
   justify-content: space-between;
   
-  background-color: #4a90e2;
+  background-color: #98c8ff;
   align-items: center; 
   
 }
 
 .box {
-  margin: 40px;
+  margin: 20px;
   padding: 20px;
   border-radius: 10px;
-  background-color: #848484;
-  color: #ffd770;
+  background-color: #ffc0c0;
+  color: #007bff;
 }
 
 
@@ -50,10 +50,13 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  
+  b {
+    margin: 10px;
+    font-size: x-large;
+  }
   input {
     margin: 5px;
-    padding: 3px;
+    padding: 10px;
   }
   
   button {
@@ -61,6 +64,8 @@
     font-family: Arial, Helvetica, sans-serif;
     padding: 2px;
     width: 100px;
+    margin-top: 10px;
+    margin-bottom: 10px;
   }
   span {
     color:red;
