--- a/hackomania/src/App.css
+++ b/hackomania/src/App.css
@@ -1,3 +1,17 @@
+.gemini {
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  text-align: center;
+  align-items: center;
+  margin-top: 20px;
+
+  p {
+    max-width: 1000px;
+  }
+}
+
+
 .App {
   display:flex;
   flex-direction: column;
