--- a/hackomania/src/App.css
+++ b/hackomania/src/App.css
@@ -11,6 +11,18 @@
   }
 }
 
+.preferenceform {
+  display: flex;
+  flex-direction: column;
+  input {
+    padding: 10px;
+    margin: 10px;
+    border-radius: 10px;
+
+  }
+
+}
+
 .HeaderNav {
   width: 100px;
   height: 40px;
