--- a/hackomania/src/App.css
+++ b/hackomania/src/App.css
@@ -39,7 +39,15 @@
   padding: 20px;
   border-radius: 10px;
   background-color: #ffc0c0;
-  color: #007bff;
+  color: #ffc0c0;
+}
+
+.box2 {
+  margin: 20px;
+  padding: 20px;
+  border-radius: 10px;
+  background-color: #ffc0c0;
+  color: #0059ff;
 }
 
 
